# AdventOfCode2022

./: README.md
1/: .cproject  .gitignore  CMakeLists.txt
1/include/: Elf.h  Elves.h
1/src/: DataLoader.cpp  DataLoader.h  Elf.cpp  Elf.h  Elves.cpp  Elves.h  main.cpp
2/: CMakeLists.txt
2/include/: DataLoader.h  RockPaperScissors.h
2/src/: DataLoader.cpp  RockPaperScissors.cpp  main.cpp
3/: CMakeLists.txt
3/include/: Backpacks.h  DataLoader.h
3/src/: Backpacks.cpp  main.cpp
4/: CMakeLists.txt
4/include/: Pairs.h
4/src/: Pairs.cpp  main.cpp
5/: CMakeLists.txt
5/include/: Stacks.h
5/src/: Stacks.cpp  main.cpp
6/: CMakeLists.txt
6/include/: PuzzleSolver.h
6/src/: PuzzleSolver.cpp  main.cpp
7/: CMakeLists.txt
7/data/: input.txt
7/include/: PuzzleSolver.h
7/src/: DataLoader.cpp  PuzzleSolver.cpp
8/include/: PuzzleSolver.h
8/src/: PuzzleSolver.cpp
9/: CMakeLists.txt
9/include/: PuzzleSolver.h
